# jackal_mine_detection

./: .gitignore  QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml  params.yaml  slam_params.yaml
config/rviz/: mine_detection.rviz
jackal_mine_detection/: automatic_driving_node.py  exploration_manager_node.py  fake_mine_publisher_node.py  frontier_explorer_node.py  mine_cluster_node.py  mine_goal_sender_node.py  mine_recorder_node.py  sim_apriltag_detector_node.py  sim_mine_detector_node.py  tag_recorder_node.py  tag_yolo_detector_node.py  waypoint_follower_node.py
jackal_mine_detection/utils/: clustering.py  geometry.py
launch/mission/: apriltag_recorder.launch.py  fake_mine.launch.py  mine_pipeline.launch.py  waypoint_explorer.launch.py
launch/sensor/: apriltag.launch.py  gazebo.launch.py  nav2.launch.py  realsense.launch.py  slam.launch.py
launch/top/: hw_frontier.launch.py  stage1_fake_mine.launch.py  stage1_minimal.launch.py  stage2_apriltag.launch.py  stage2_nav.launch.py  stage2_sim.launch.py  stage3_frontier.launch.py  stage3_waypoint.launch.py  stage4_camera.launch.py  stage4_full.launch.py
models/apriltag_36h11_0/: model.config  model.sdf
models/apriltag_36h11_1/: model.config  model.sdf
models/apriltag_36h11_2/: model.config  model.sdf
scripts/: 00_check_env.sh  01_install_dependencies.sh  02_create_workspace.sh  03_setup_apriltag_textures.sh  generate_dataset.py  setup_alienware.sh  start_collab.sh  train_yolo.py
urdf/: jackal_sim.urdf
worlds/: mine_detection.world
(+6 files in other folders)
