<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_mine_detection</name>
  <version>0.1.0</version>
  <description>
    Jackal UGV Indoor Mine (AprilTag) Detection - SLAM map frame logging,
    cluster computation, and Nav2 goal sending pipeline.
  </description>
  <maintainer email="rokyp1278@gmail.com">park minseok</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <!-- For 2nd stage (AprilTag) -->
  <exec_depend>apriltag_msgs</exec_depend>

  <!-- Launch / data -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
